--- a/test/EFCore.PG.Tests/EFCore.PG.Tests.csproj
+++ b/test/EFCore.PG.Tests/EFCore.PG.Tests.csproj
@@ -8,6 +8,12 @@
   <ItemGroup>
     <ProjectReference Include="..\..\src\EFCore.PG\EFCore.PG.csproj" />
     <ProjectReference Include="..\EFCore.PG.FunctionalTests\EFCore.PG.FunctionalTests.csproj" />
+
+    <ProjectReference Include="../../../EFCore/src/EFCore/EFCore.csproj" />
+    <ProjectReference Include="../../../EFCore/src/EFCore.Relational/EFCore.Relational.csproj" />
+    <ProjectReference Include="../../../EFCore/src/EFCore.Design/EFCore.Design.csproj" />
+    <ProjectReference Include="../../../EFCore/test/EFCore.Relational.Specification.Tests/EFCore.Relational.Specification.Tests.csproj" />
+
   </ItemGroup>
 
   <ItemGroup>
@@ -16,6 +22,12 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational.Specification.Tests" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" />
     <PackageReference Include="Microsoft.Extensions.Logging" />
+<!--
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="$(EFCoreVersion)" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="$(EFCoreVersion)" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational.Specification.Tests" Version="$(EFCoreVersion)" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="$(EFCoreVersion)" />
+-->
   </ItemGroup>
 
 </Project>
