--- a/test/Directory.Build.props
+++ b/test/Directory.Build.props
@@ -8,7 +8,7 @@
 
   <PropertyGroup>
     <!-- There's lots of use of internal EF Core APIs from the tests, suppress the analyzer warnings for those -->
-    <NoWarn>$(NoWarn);xUnit1004;EF1001</NoWarn>
+    <NoWarn>$(NoWarn);xUnit1003;xUnit1004;xUnit1013;EF1001</NoWarn>
   </PropertyGroup>
 
   <ItemGroup>
