--- a/Directory.Build.targets
+++ b/Directory.Build.targets
@@ -1,14 +1,14 @@
 ﻿<Project>
   <ItemGroup>
-    <PackageReference Update="Microsoft.EntityFrameworkCore" Version="3.0.0" />
-    <PackageReference Update="Microsoft.EntityFrameworkCore.Relational" Version="3.0.0" />
-    <PackageReference Update="Microsoft.EntityFrameworkCore.Abstractions" Version="3.0.0" />
-    <PackageReference Update="Microsoft.EntityFrameworkCore.Relational.Specification.Tests" Version="3.0.0" />
-    <PackageReference Update="Microsoft.EntityFrameworkCore.Design" Version="3.0.0" />
+    <PackageReference Update="Microsoft.EntityFrameworkCore" Version="3.1.0-preview2.19525.5" />
+    <PackageReference Update="Microsoft.EntityFrameworkCore.Relational" Version="3.1.0-preview2.19525.5" />
+    <PackageReference Update="Microsoft.EntityFrameworkCore.Abstractions" Version="3.1.0-preview2.19525.5" />
+    <PackageReference Update="Microsoft.EntityFrameworkCore.Relational.Specification.Tests" Version="3.1.0-preview2.19525.5" />
+    <PackageReference Update="Microsoft.EntityFrameworkCore.Design" Version="3.1.0-preview2.19525.5" />
 
-    <PackageReference Update="Microsoft.Extensions.Configuration.Json" Version="3.0.0" />
-    <PackageReference Update="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.0.0" />
-    <PackageReference Update="Microsoft.Extensions.Logging" Version="3.0.0" />
+    <PackageReference Update="Microsoft.Extensions.Configuration.Json" Version="3.1.0-preview2.19525.4" />
+    <PackageReference Update="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="3.1.0-preview2.19525.4" />
+    <PackageReference Update="Microsoft.Extensions.Logging" Version="3.1.0-preview2.19525.4" />
 
     <PackageReference Update="Npgsql" Version="4.1.1" />
     <PackageReference Update="Npgsql.NodaTime" Version="4.1.1" />
